# Fixed-point-library

./: Approximations.cpp  Approximations.h  Approximations_ELU.cpp  Approximations_ELU.h  Approximations_tanh.cpp  Approximations_tanh.h  BKM.cpp  BKM.h  BKM_simulations.cpp  BKM_simulations.h  CMakeLists.txt  CORDIC.cpp  CORDIC.h  ELU_simulations.cpp  ELU_simulations.h  FixedPoint32.cpp  FixedPoint32.h  Fixed_point.cpp  Fixed_point.h  README.md  Sigmoid_simulations.cpp  Sigmoid_simulations.h  Simulator.cpp  Simulator.h  TanH_simulations.cpp  TanH_simulations.h  main.cpp
